Version 0.1.2~dev

	* TODO

Version 0.1.1 Released on 2013/01/29

	* Fix interface ordering in some random cases, closes: #6577
	* Improve the man page
	* Update the README

Version 0.1.0 Released on 2011/08/29

	* Initial release, closes #4500.