@@ -2,6 +2,8 @@
 template_vm = templates/libvirt/vmtemplate.xml
 template_disk = templates/libvirt/vmtemplate-disk.xml
 template_network = templates/libvirt/vmtemplate-network.xml
+template_default = templates/libvirt/libvirt-bin.default
+enable_daemon = false
 vnc_port = -1
 vnc_listen = 127.0.0.1
 vnc_password = none
